validating-admission-policies/protected-pvc/binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: protected-pvc-template-check-binding
spec:
  policyName: protected-pvc-template-check
  validationActions:
    - Deny
  paramRef:
    name: protected-pvc-params
    namespace: default
    parameterNotFoundAction: Deny
  matchResources:
    resourceRules:
      - apiGroups: ["workspace.jupyter.org"]
        apiVersions: ["v1alpha1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["workspaces"]
